packages/transpiler/test/fixtures/errors/object-literal-spread/input.ts
/**
 * @record
 * @public
 */
export interface Base {
    x: number;
    y: number;
}

/**
 * @public
 */
export class ObjectSpread {
    public extend(other: Base): Base {
        return { ...other, x: 10 };
    }
}
